--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3,3 +3,20 @@
     margin:0;
     padding: 0;
 }
+header{
+    background-color: rgba(10, 14, 29);
+    padding-top: 2%;
+
+}
+header h1{
+    text-align: center;
+    font-size:xxx-large ;
+    margin-top: 4vh;
+    padding-bottom: 5vh;
+    font-weight: 900;
+    color: orange;
+}
+header span{
+    font-size:medium;
+    color: yellowgreen
+}
