--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -23,7 +23,7 @@ header span{
 
 /* MAIN CONTENT */
 #form{
-    margin-top:0%;
+    margin-top:1%;
     display: flex;
     justify-content: center;
 }
@@ -35,4 +35,38 @@ header span{
     background-color: orange;
     padding: 8px;
     border-radius: 5px;
+}
+
+/* SLIDING IMAGES */
+#slider-images{
+    overflow: hidden;
+}
+.slides img{
+    height:800px;
+    width: 100%;
+}
+#slider-images figure div{
+    float: left;
+    width: 20%;
+}
+#slider-images figure img{
+    width:100%;
+    height:95vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    float: left;
+}
+#slider-images figure{
+    position:relative;
+    width: 500%;
+    margin:0;
+    animation:animate 5s infinite;
+}
+.slides p{
+    position: fixed;
+    text-align: center;
+    color: white;
+    font-size: x-large;
+    padding-left: 50%;
 }
