add background image

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -21,9 +21,18 @@ header span{
     color: yellowgreen
 }
 
+/*  */
+#container{
+    background:rgba(0, 0, 0, 0.6)url('https://i.pinimg.com/564x/c7/41/dc/c741dc1fc5bbea24f8e5257f70e605a0.jpg');
+    background-blend-mode: darken;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 100%;
+
+}
 /* MAIN CONTENT */
 #form{
-    margin-top:1%;
+    margin-bottom:5%;
     display: flex;
     justify-content: center;
 }
@@ -38,6 +47,10 @@ header span{
 }
 
 /* SLIDING IMAGES */
+figure{
+    margin-top: 3%;
+    margin-bottom: 40%;
+}
 #slider-images{
     overflow: hidden;
 }
@@ -74,14 +87,15 @@ header span{
 @keyframes animate{
     0%{left:0}
     10%{left:0}
-    12%{left:0}
-    20%{left:-100%}
-    30%{left:-100%}
-    40%{left:-200%}
+    18%{left:0}
+    27%{left:-100%}
+    34%{left:-100%}
+    45%{left:-200%}
     50%{left:-200%}
-    60%{left:-300%}
-    70%{left:-300%}
-    80%{left:-400%}
-    96%{left:-400%}
-    100%{left:-0%}
+    58%{left:-300%}
+    67%{left:-300%}
+    78%{left:-400%}
+    86%{left:-400%}
+    94%{right:0%}
+    98%{right:0%}
 }
