--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -23,7 +23,7 @@ header span{
 
 /*  */
 #container{
-    background:rgba(0, 0, 0, 0.6)url('https://i.pinimg.com/564x/c7/41/dc/c741dc1fc5bbea24f8e5257f70e605a0.jpg');
+    background:rgba(0, 0, 0, 0.4)url('../images/Party-Rave.jpg');
     background-blend-mode: darken;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,7 +32,7 @@ header span{
 }
 /* MAIN CONTENT */
 #form{
-    margin-bottom:5%;
+    margin-bottom:1%;
     display: flex;
     justify-content: center;
 }
@@ -48,22 +48,26 @@ header span{
 
 /* SLIDING IMAGES */
 figure{
-    margin-top: 3%;
+    margin-top: 2%;
     margin-bottom: 40%;
 }
 #slider-images{
     overflow: hidden;
 }
-.slides img{
-    height:800px;
-    width: 100%;
+#slider-images p{
+    color: white;
+    text-align: center;
+    font-size: larger;
+}
+#slider-images p span{
+    color: orange;
 }
 #slider-images figure div{
     float: left;
     width: 20%;
 }
 #slider-images figure img{
-    width:40%;
+    width:20%;
     height:50vh;
     background-size: cover;
     background-position: center;
@@ -73,15 +77,17 @@ figure{
 #slider-images figure{
     position:relative;
     width: 500%;
-    margin-left:30%;
+    margin-left:40%;
     animation:animate 20s infinite;
 }
 .slides p{
     position: fixed;
-    text-align: center;
-    color: white;
+    text-align:center;
+    color: orange;
     font-size: x-large;
-    padding-left: 10%;
+    font-weight: 700;
+    padding-left:0%;
+    padding-top: 20%;
 }
 
 @keyframes animate{
