Style the next and Get more buttons

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -116,3 +116,9 @@ section{
     margin-top: 5%;
     text-align: center;
 }
+
+/* More Buttons */
+.btn {
+    padding: 4px;
+    background-color: yellowgreen;
+}
