--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -87,12 +87,9 @@ figure{
 figure .slides p{
     position: fixed;
     text-align:center;
-    color: green;
     background-color: orange;
     font-size: xx-large;
-    padding: 8px;
-    font-weight: 800;
-    text-shadow: 4px 6px 7px;
+
 }
 @keyframes animate{
     0%{left:0}
@@ -110,10 +107,11 @@ figure .slides p{
     98%{right:0%}
 }
 
-/* SECTION PART */
+/* Section That Displays Lyrics */
 section{
     color: white;
     margin-top: 5%;
+    background-size: ;
     text-align: center;
 }
 
@@ -123,6 +121,51 @@ section{
     background-color: yellowgreen;
 }
 
+/* Feedback Section */
+#feedback-section{
+    color: white;
+    background: rgba(0, 0, 0, 0.7) url('https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bXVzaWMlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60');
+    background-blend-mode: darken;
+    background-repeat: no-repeat;
+    background-size: 100%;
+
+}
+#feedback-section h2{
+    color: white;
+    font-family: 'Franklin Gothic Medium';
+    font-size: larger;
+    text-align: center;
+    margin: 0.1% 3% 10% 4%;
+    padding-top: 2%;
+}
+#feedback-section h2 span{
+    color:orange;
+    font-size: x-large;
+}
+#feedback-section h3{
+    color: Orange;
+    text-align: center;
+    margin-top: 5%
+}
+#feedback-section li{
+    text-align: center;
+    list-style-type: none;
+}
+
+#feedback-form input{
+    width: 30%;
+    padding: 2%;
+    margin-left: 32%;
+    margin-bottom: 10%;
+}
+#feedback-form button{
+    width:10%;
+    border: 2%;
+    padding: 7px 2px 3px 2px;
+    margin: 60px 80px 40px 0px;
+    background-color: orange;
+    border-radius: 5px;
+}
 
 /* Footer */
 #footer{
@@ -130,20 +173,13 @@ section{
     color: white;
     /* margin-top: 20px; */
 }
-#feedback{
-    width: 100%;
-    padding: 2% 50% 0% 42%;
+#footer h5{
+    color: orange;
 }
-#feedback button{
-    width:20%
+#follow{
+    display: flex;
+    justify-content:space-evenly;
 }
-#footer span{
-    color:orange;
-    font-size: x-large;
-}
-
-#footer h2{
-    font-family: 'Franklin Gothic Medium';
-    font-size: larger;
-    text-align: center;
-}
+#follow li{
+    list-style: none;
+} 
