--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -88,10 +88,12 @@ figure{
     animation:animate 20s infinite;
 }
 figure .slides p{
-    position: fixed;
+    position:absolute;
     text-align:center;
     background-color: orange;
     font-size: xx-large;
+    margin: 20px 5px 2px 10px;
+    padding:  10px;
 
 }
 @keyframes animate{
@@ -158,10 +160,10 @@ section{
 }
 
 #feedback-form input{
-    width: 30%;
+    width: 20%;
     padding: 2%;
-    margin-left: 32%;
-    margin-bottom: 25%;
+    margin-left: 35%;
+    margin-bottom: 2%;
 }
 #feedback-form button{
     width:10%;
