--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -134,7 +134,6 @@ section{
     background-repeat: no-repeat;
     background-size: 100%;
     background-blend-mode: darken;
-
 }
 #feedback-section h2{
     color: white;
@@ -154,16 +153,17 @@ section{
     margin-top: 2%;
 }
 #feedback-section li{
-    text-align: center;
     list-style-type: none;
-    margin: 2% 3% 1% 5%;
-    padding: 2% 3% 4% 5%;
+    margin: 2% 20% 2% 20%;
+    padding: 2% 0% 3% 2%;
+    text-align: center;
     background-color: grey;
+    font-size: larger;
 }
 
 #feedback-form input{
-    width: 20%;
-    padding: 2%;
+    width: 25%;
+    padding: 4%;
     margin-left: 35%;
     margin-bottom: 2%;
 }
